# ParisMarketSim

./: CMakeLists.txt  README.md
QTvers/: CMakeLists.txt  main.qml
include/core/: Ordre.hpp  Transaction.hpp
include/engine/: MatchingEngine.hpp
include/gui/: DashboardWindow.hpp  LoginWindow.hpp
include/system/: Interface.hpp  Serveur.hpp
include/user/: Client.hpp  Portefeuille.hpp
src/core/: Ordre.cpp  Transaction.cpp
src/engine/: MatchingEngine.cpp
src/gui/: DashboardWindow.cpp  LoginWindow.cpp
src/main/: main.cpp
src/system/: Interface.cpp  Serveur.cpp
src/user/: Client.cpp  Portefeuille.cpp
